--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -3,3 +3,9 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=riean_kesmarki
 spring.datasource.password=oswRHirc7wMjhV0
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
