--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>hu.riean.personalregistry.Personalregistry</exec.mainClass>
+        <start-class>hu.riean.personalregistry.Personalregistry</start-class>
     </properties>
     
     <dependencies>
@@ -50,6 +51,13 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         
         <dependency>
             <groupId>org.springframework.boot</groupId>
